Disabled Tweet Comment, doesn't work on HTTPS

--- a/styles.css
+++ b/styles.css
@@ -496,6 +496,7 @@ body {
 		}
 /*  12/14/18 by DW -- twitter comments */
 	.spTwitterComment {
+		display: none;
 		margin-left: 0px;
 		margin-right: 8px;
 		}
