--- a/styles.css
+++ b/styles.css
@@ -629,14 +629,39 @@ body {
 		margin-bottom: 7px;
 		}
 	.spMarkdownText ol li {
-		list-style-type: numeric;
+		list-style-type: decimal;
 		}
 	.spMarkdownText ul li {
 		list-style-type: disc;
 		}
-        .spMarkdownText blockquote {
-                margin-top:20px;
-                }
+    .spMarkdownText blockquote {
+        margin-top:20px;
+        }
+	.spMarkdownText p {
+		line-height: 150%;
+		margin-bottom: .6em;
+		}	
+	.divMarkdownText {
+		margin-top: 25px;
+		}			
+	.divMarkdownText ul, .divMarkdownText ol {
+		margin-top: 7px;
+		margin-bottom: 7px;
+		}
+	.divMarkdownText ol li {
+		list-style-type: numeric;
+		}
+	.divMarkdownText ul li {
+		list-style-type: disc;
+		}
+	.divMarkdownText p {
+		margin-bottom: 0.6em;
+		line-height: 150%;
+		}
+
+	.divMarkdownText h6, .divMarkdownText h5, .divMarkdownText h4, .divMarkdownText h3, .divMarkdownText h2, .divMarkdownText h1 {
+		margin-top: 15px;
+		}
 
 /* styles for phone */
 	@media only screen 
